--- a/.gitignore
+++ b/.gitignore
@@ -75,17 +75,10 @@ yarn-error.log
 !.yarn/versions
 
 # iOS
-ios/.generated/
-ios/.expo/
-ios/*.xcodeproj/project.xcworkspace/
-ios/*.xcodeproj/xcshareddata/
-ios/*.xcodeproj/xcuserdata/
+ios/
 
 # Android
-android/.cxx/
-android/.settings/
-android/app/.cxx/
-android/app/.externalNativeBuild/
+android/
 
 # 환경 변수
 .env
@@ -102,3 +95,13 @@ android/app/.externalNativeBuild/
 /.babelrc
 /packager-cache.json
 /__generated__/
+
+# bundle
+.bundle/
+
+# IDE
+.vscode/
+.idea/
+
+# Test
+__tests__/
